--- a/video.html
+++ b/video.html
@@ -16,16 +16,9 @@
 			<a href="rezumat.html">Rezumat</a>
 			&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
 			<a href="video.html">Video</a>
-            
-			
+           
 		</div>
 		</div>
-
-        <div id="button">
-        <div id="button_div">
-        <a href="login.html">Autentificare</a>
-        </div>
-        </div>
 
     <div class="intro">
         <img src="img/breadmini.png" style="width: 10vw;height: 12vw">
@@ -36,7 +29,7 @@
     </div>
 
     <div class="img_div">
-        <img src="img/bgcincipaini.jpg" class="title_img" title="Cinci Paini">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/mpExCwOnJiY" title="YouTube video player"   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div style="border-top: 30px solid black">
@@ -156,18 +149,7 @@
 
         </div>
 </div>
-
-
-
-<div class="centrat">
-        <button onclick="toTop()" class="button-53" role="button">Înapoi în sus.</button>  
 </div>
-
-
-
-
-</div>
-
 
 </body>
 </html>
