--- a/poveste.html
+++ b/poveste.html
@@ -9,7 +9,7 @@
     <div class="maindiv">
 		<div class="nav_div">
 		<div class="nav">
-                        <a href="index.html">Poveste</a>
+            <a href="#poveste">Poveste</a>
 			&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
 			<a href="biografie.html">Biografie</a>
 			&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
@@ -17,15 +17,8 @@
 			&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
 			<a href="video.html">Video</a>
             
-			
 		</div>
 		</div>
-
-        <div id="button">
-        <div id="button_div">
-        <a href="login.html">Autentificare</a>
-        </div>
-        </div>
 
     <div class="intro">
         <img src="img/breadmini.png" style="width: 10vw;height: 12vw">
@@ -156,18 +149,7 @@
 
         </div>
 </div>
-
-
-
-<div class="centrat">
-        <button onclick="toTop()" class="button-53" role="button">Înapoi în sus.</button>  
 </div>
-
-
-
-
-</div>
-
 
 </body>
 </html>
